--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
+    "@stomp/stompjs": "^7.1.0",
     "axios": "^1.8.3",
     "next": "15.2.2",
     "react": "^19.0.0",
