--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
