--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,8 @@
+# NEXT app router URL
 NEXT_PUBLIC_API_URL=http://localhost:3000
+
+# Backend server URL
+NEXT_PUBLIC_SERVER_URL=http://localhost:8080
+
+# Backend WS server URL
+NEXT_PUBLIC_SERVER_WS_URL=http://localhost:8080
