--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
-    "stompjs": "^2.3.3"
+    "stompjs": "^2.3.3",
     "react-icons": "^5.5.0",
     "react-textarea-autosize": "^8.5.9"
   },
