--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-markdown": "^10.1.0",
     "stompjs": "^2.3.3",
     "react-icons": "^5.5.0",
-    "react-textarea-autosize": "^8.5.9"
+    "react-textarea-autosize": "^8.5.9",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
