feature(useChatSync): 동일 Chat id 메시지 update 기능 변경
- 같은 chat id를 가진 메시지가 새로 들어오면 해당 메시지를 update 하도록 기능 변경

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
 # Debug 메시지 출력 여부
-NEXT_PUBLIC_DEBUG=false
+NEXT_PUBLIC_DEBUG=true
 
 # NEXT app router URL
 NEXT_PUBLIC_API_URL=http://localhost:3000
@@ -9,3 +9,6 @@ NEXT_PUBLIC_SERVER_URL=http://localhost:8080
 
 # Backend WS server URL
 NEXT_PUBLIC_SERVER_WS_URL=http://localhost:8080
+
+# Backend Login Page
+NEXT_PUBLIC_LOGIN_URL=http://localhost:8080/login
