--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
@@ -17,21 +18,27 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-markdown": "^10.1.0",
-    "stompjs": "^2.3.3",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-textarea-autosize": "^8.5.9",
+    "stompjs": "^2.3.3",
     "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-jest": "^29.7.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "jest": "^29.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
