--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
     "@stomp/stompjs": "^7.1.0",
     "axios": "^1.8.3",
+    "lucide-react": "^0.536.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
