feat: 디자인블록 버튼 누르면 tldraw가 나타남 - 그림 저장은 X

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
     "@stomp/stompjs": "^7.1.0",
+    "@tldraw/tldraw": "^3.15.4",
     "axios": "^1.8.3",
     "lucide-react": "^0.536.0",
     "next": "15.2.2",
