--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
+    "@monaco-editor/react": "^4.7.0",
     "@stomp/stompjs": "^7.1.0",
     "axios": "^1.8.3",
     "lucide-react": "^0.536.0",
+    "monaco-editor": "^0.53.0",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
