--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.28.5",
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@testing-library/react": "^16.3.0",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/jest": "^29.5.14",
@@ -43,6 +45,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
